[gd_scene load_steps=4 format=3 uid="uid://b7otnhjg4qhfw"]

[ext_resource type="Script" uid="uid://cyeui10ssuvpw" path="res://src/ui/widgets/settings_row/checkbox_settings_row.gd" id="1_6yjii"]
[ext_resource type="Script" uid="uid://bj7au7lliu4c5" path="res://src/ui/widgets/settings_row/slider_settings_row.gd" id="1_d0m05"]
[ext_resource type="PackedScene" uid="uid://j6doeyqld36j" path="res://src/ui/widgets/click_hslider.tscn" id="3_dxpn2"]

[node name="SliderSettingsRow" type="HBoxContainer"]
script = ExtResource("1_d0m05")
metadata/_custom_type_script = ExtResource("1_6yjii")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="Control" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClickHSlider" parent="." instance=ExtResource("3_dxpn2")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="value_changed" from="ClickHSlider" to="." method="_on_click_h_slider_value_changed"]
